# window-renicer

./: Cargo.toml  PKGBUILD  window-renicer.service
kwin-script/: metadata.json
kwin-script/window-renicer/contents/code/: main.js
src/: main.rs  ptree.rs
